tags/2013-08-29_cppreference/Archive/4b6e62cd2626acf31960e1a556c69e33-7063104e283ed82d51a6fde7370c6e59/output
+ g++-4.8 -std=c++11 -O2 -Wall -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:16:25: error: cannot bind ‘std::ostream {aka std::basic_ostream<char>}’ lvalue to ‘std::basic_ostream<char>&&’
   std::cout << foo<int>();
                         ^
In file included from /usr/include/c++/4.8/iostream:39:0,
                 from main.cpp:1:
/usr/include/c++/4.8/ostream:602:5: error:   initializing argument 1 of ‘std::basic_ostream<_CharT, _Traits>& std::operator<<(std::basic_ostream<_CharT, _Traits>&&, const _Tp&) [with _CharT = char; _Traits = std::char_traits<char>; _Tp = foo<int>]’
     operator<<(basic_ostream<_CharT, _Traits>&& __os, const _Tp& __x)
     ^
